--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="please_wait">请稍后</string>
     <string name="cancel">取消</string>
     <string name="sure">确定</string>
+
+    <string name="input_impose_num_lower_case">0123456789abcdefghijklmnopqrstuvwxyz</string>
+    <string name="input_impose_num_upper_case">0123456789ABCDEFGHIJKLmMNOPQRSTUVWXYZ</string>
+    <string name="input_impose_num">0123456789</string>
+    <string name="input_impose_num_lower_upper_case">0123456789ABCDEFGHIJKLmMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
 </resources>
