--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,16 @@
         <item>你的配偶的名字</item>
         <item>你的生日</item>
     </string-array>
+
+
+    <string-array name="spinner_foreign_transfer">
+        <item>碳控因子</item>
+        <item>循环卷</item>
+        <item>循环包</item>
+        <item>注册积分</item>
+    </string-array>
+
+    <string-array name="spinner_internal_transfer">
+        <item>碳控因子转碳控积分</item>
+    </string-array>
 </resources>
