--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,12 +81,16 @@
 
     <string-array name="spinner_foreign_transfer">
         <item>碳控因子</item>
-        <item>循环卷</item>
         <item>循环包</item>
+        <item>循环卷</item>
         <item>注册积分</item>
     </string-array>
 
     <string-array name="spinner_internal_transfer">
         <item>碳控因子转碳控积分</item>
     </string-array>
+
+    <string name="purchase_meal_describe">注:\n\t\t起航套餐可以全部用注册积分购买消费套餐，也可以采用注册积分加消费积分购买消费套餐，但是注册积分比例不得低于购买套餐的30%!!!\n\t\t普通套餐只能使用碳控因子购买!!!</string>
+    <string name="agency_protocol_link">我已阅读代理协议:<a href="http://www.baidu.com">百度一下</a></string>
+
 </resources>
