--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,16 @@
     <string name="purchase_meal_describe">注:\n\t\t起航套餐可以全部用注册积分购买消费套餐，也可以采用注册积分加消费积分购买消费套餐，但是注册积分比例不得低于购买套餐的30%!!!\n\t\t普通套餐只能使用碳控因子购买!!!</string>
     <string name="agency_protocol_link">我已阅读代理协议:<a href="http://www.baidu.com">百度一下</a></string>
 
+
+    <!-- WXPayEntryActivity -->
+    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
+    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
+
+    <string name="app_tip">提示</string>
+    <string name="launch_from_wx">Launch From Weixin</string>
+    <string name="errcode_success">支付成功</string>
+    <string name="errcode_cancel">支付取消</string>
+    <string name="errcode_deny">支付被拒绝</string>
+    <string name="errcode_unknown">支付返回</string>
+    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
 </resources>
