--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="exchange_center">兑换中心</string>
     <string name="recode_center">记录中心</string>
     <string name="carbon_benefit">碳控公益</string>
+    <string name="message_tips">(*^_^*)请详细描述您遇到的问题，有助于我们快速定位并解决问题，或留下您宝贵的意见或建议，我们会认真进行评估！</string>
 
     <string name="please_wait">请稍后</string>
     <string name="cancel">取消</string>
@@ -89,4 +90,21 @@
     <string-array name="spinner_internal_transfer">
         <item>碳控因子转碳控积分</item>
     </string-array>
+    
+    <string-array name="spinner_certificate_type">
+        <item>身份证</item>
+        <item>驾驶证</item>
+        <item>护照</item>
+    </string-array>
+
+    <string-array name="spinner_exchange_type">
+        <item>碳控因子兑换循环积分</item>
+        <item>碳控因子兑消费积分</item>
+    </string-array>
+    
+    <string-array name="spinner_consumption_points">
+        <item>消费积分兑换循环积分</item>
+        <item>消费积分兑换碳控因子</item>
+    </string-array>
+
 </resources>
