--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,14 +81,17 @@
 
 
     <string-array name="spinner_foreign_transfer">
-        <item>碳控因子</item>
-        <item>循环包</item>
-        <item>循环卷</item>
-        <item>注册积分</item>
+       <item>碳控因子转碳控因子</item>
     </string-array>
 
     <string-array name="spinner_internal_transfer">
-        <item>碳控因子转碳控积分</item>
+        <item>碳控因子转循环积分</item>
+        <item>碳控因子转消费积分</item>
+        <item>注册积分转产品积分</item>
+        <item>注册积分转消费积分</item>
+        <item>消费积分转循环积分</item>
+        <item>消费积分转碳控因子</item>
+        <item>现金积分转注册积分</item>
     </string-array>
 
     <string name="purchase_meal_describe">注:\n\t\t起航套餐可以全部用注册积分购买消费套餐，也可以采用注册积分加消费积分购买消费套餐，但是注册积分比例不得低于购买套餐的30%!!!\n\t\t普通套餐只能使用碳控因子购买!!!</string>
@@ -108,6 +111,10 @@
     <string-array name="spinner_consumption_points">
         <item>消费积分兑换循环积分</item>
         <item>消费积分兑换碳控因子</item>
+    </string-array>
+    <string-array name="spinner_trad_type">
+        <item>挂卖</item>
+        <item>挂买</item>
     </string-array>
 
 </resources>
