投诉内容为空时显示投诉按钮，有投诉内容则将投诉按钮变为查看投诉，点击查看弹出dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="carbon_benefit">碳控公益</string>
     <string name="message_tips">(*^_^*)请详细描述您遇到的问题，有助于我们快速定位并解决问题，或留下您宝贵的意见或建议，我们会认真进行评估！</string>
 
-    <string name="please_wait">请稍后</string>
+    <string name="please_wait">加载中...</string>
     <string name="cancel">取消</string>
     <string name="sure">确定</string>
 
