修改界面bug，文本框的输入类型和注册默认加上邀请码

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
         <item>2星交易商</item>
         <item>3星交易商</item>
         <item>4星交易商</item>
-        <item>星交易商</item>
+        <item>5星交易商</item>
     </string-array>
 
     <string-array name="user_type">
