增加在用户关闭app前保存步数持久化，去除注册积分不足弹出对话框跳转到购买注册积分界面，对外互转增加消费积分互转

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string-array name="spinner_foreign_transfer">
         <item>碳控因子</item>
         <item>注册积分</item>
+        <item>消费积分</item>
         <!--  <item>产品积分</item>-->
     </string-array>
 
